# v6_api

./: .coveragerc  .dockerignore  .env  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.in  HOWTO-DEV.md  Jenkinsfile  MANIFEST.in  Makefile  Makefile.prod  Makefile_so.dev  PUBLIC-TRANSPORTATION.md  README.md  README.txt  SMART-ORIGIN-README.md  alembic.ini.in  calcul_duration_for_routes.bm.sh  calcul_duration_for_routes.sh  common.ini.in  count_lot_2.sh  default.vcl  dev-requirements.txt  dev_api.Dockerfile  dev_db.Dockerfile  development.ini.in  docker-compose.yml  docker-entrypoint.sh  elasticsearch5.Dockerfile  elasticsearch6.Dockerfile  elasticsearch7.Dockerfile  elasticsearch8.Dockerfile  get_public_transports_by_navitia.sh  get_public_transports_for_1_waypoint.sh  get_public_transports_from_France.bm.sh  get_public_transports_from_France.sh  get_public_transports_from_France_distinct.bm.sh  get_public_transports_from_France_distinct.sh  (+19 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  codeql-analysis.yml  create-release.yml
alembic_migration/: README.md  env.py  extensions.py
alembic_migration/versions/: 06d2a35e39c8_improve_serac_database.py  06d2a35e39c8_improve_serac_database_data.csv  077ddf78a1f3_fix_protected_docs_versions.py  1705d3136641_add_view_users_for_routes.py  1bfd4ff6d3f8_add_column_masked_to_document_version.py  1d851410e3af_add_column_for_terms_of_service.py  24f8da659c78_add_ratings_to_outings.py  24f8da659c78_outings.sql  27bf1b7197a6_add_coverages.py  2c90b2e5ca7e_add_chinese.py  2d710311ac56_add_view_count_to_document.py  305b064bdf66_add_slovenian.py  38df9393c9a9_init.py  576e341ee94d_add_document_views_table.py  626354ffcda0_add_column_external_resources_to_waypoints.py  6a48dc6c8065_merge_24f8da659c78_and_077ddf78a1f3.py  6b40cb9c7c3d_add_calculated_duration_to_routes.py  6d64a7fbdb8b_add_column_anonymous_to_xreports.py  7e32b653172f_add_column_user_blocked.py  83956b269661_add_rate_limiting_structure.py  85a5ed3c76a8_add_index_on_associationlog.py  86748b36f74e_add_column_fundraiser.py  889705aa08df_.py  8bd0478eea2a_add_index_on_outing_date_end.py  8c230a4a0284_add_langs_feed_filter.py  8cc46db2c515_add_table_es_deleted_documents.py  8e0f02982746_update_avalanche_slopes.py  91b1beed9a1c_change_primary_key_for_esdeletedlocale.py  940bd29040d8_add_table_es_deleted_locales.py  9739938498a8_add_sso_tables.py  ab88debfc524_add_2_columns_to_feed_and_user_schema_.py  abae46fab037_add_disable_view_count_to_document.py  b59d3efaf2a1_add_column_public_transportation_rating_.py  bacd59c5806a_add_slacklining.py  bb61456d557f_create_stops_and_waypoints_stops.py  bece9007ab83_add_documents_tags.py  bece9007ab83_add_documents_tags_table.py  c306e1cb9bfe_add_calculated_duration_to_archive_route.py  d4d360ef69bc_update_public_transportation_types.py  ff894861149d_add_column_disable_comments.py
apache/: wsgi.conf.in
api/: __init__.py  attributes.py
api/models/: __init__.py  document.py  document_history.py  route.py  waypoint.py
api/tests/: __init__.py
api/views/: document.py  route.py  waypoint.py
app_api/: MANIFEST.in  Makefile  __init__.py  development.ini  development.ini.in  production.ini  setup.py  tests.py
app_api/apache/: app-api.wsgi.in
app_api/app_api/: __init__.py  views.py
app_api/config/: alex  default  tsauerwein
app_api/ext/: caching.py
app_api/models/: __init__.py  document.py  document_history.py  route.py  waypoint.py
app_api/scripts/: initializedb.py
app_api/tests/: __init__.py  test.ini
app_api/views/: __init__.py  document.py  route.py  summit.py  waypoint.py
c2corg_api/: __init__.py  app.py  attributes.py  caching.py  database.py  fields_waypoint.py
c2corg_api/crawler/: crawler_service.py
c2corg_api/emails/: email_service.py
c2corg_api/ext/: colander_ext.py  geometry.py  sqa_view.py
c2corg_api/jobs/: __init__.py  increment_documents_views.py  purge_expired_tokens.py  purge_non_activated_accounts.py
c2corg_api/markdown/: README.md  __init__.py  alerts.py  emojis.py  header.py  img.py  ltag.py  nbsp.py  ptag.py  toc.py  video.py  wikilinks.py
c2corg_api/models/: README.md  __init__.py  area.py  area_association.py  article.py  association.py  association_views.py  book.py  cache_version.py  coverage.py  dictify.py  document.py  document_history.py  document_tag.py  document_topic.py  document_views.py  enums.py  es_sync.py  feed.py  field_spec.py  image.py  mailinglist.py  objectify.py  outing.py  pydantic.py  report.py  route.py  schema_utils.py  sso.py  stop.py  stoparea.py  token.py  topo_map.py  topo_map_association.py  user.py  user_profile.py  utils.py  waypoint.py  waypoint_stop.py  waypoint_stoparea.py  (+1 more)
c2corg_api/queues/: queues_service.py
c2corg_api/routers/: __init__.py  area.py  article.py  association.py  association_history.py  book.py  cooker.py  coverage.py  document_changes.py  document_delete.py  document_history.py  document_merge.py  document_protect.py  document_revert.py  document_tag.py  document_version_mask.py  feed.py  forum.py  health.py  image.py  navitia.py  outing.py  route.py  search.py  (+15 more)
config/: agina  alex  amorvan  default  demo  dev  dkocich  docker-dev  elemoine  env.default  env.demo  env.dev  env.devcontainer  env.local.sample  env.test  gberaudo  github-actions  main  so.dev  so.test  travis  tsauerwein
dataMigration/: README.md
docker/: Dockerfile  Dockerfile.dev  Dockerfile.elasticsearch
docker-compose/: elasticsearch.yml
docker-entrypoint.d/: 10-env-replace.sh
es_migration/: 2017-03-29_slackline.py  Readme.md
scripts/: README.md  anonymize-data.sql  check_discourse_connection.sh  create_user_db.sh  create_user_db_test.sh  env_replace  env_replace_so  esUpdateMapSettings.sh  esUpdateMapSettings25.sh  esUpdateMapSettings56.sh  esUpdateMapSettings67.sh  esUpdateMapSettings71.sh  esUpdateMapSettings78.sh  init_test.sh  lint.sh  pycurl-example.py  test.sh  travis-build.sh  travis-db.sql  travis-publish.sh  update_topic_ids.sh
(+574 files in other folders)
